PROJECT( add_toc )

FIND_PACKAGE(KDE4 REQUIRED)

FIND_PATH(LIBTIDY_INCLUDE_DIR tidy.h)
if( NOT LIBTIDY_INCLUDE_DIR )
    find_path(LIBTIDY_INCLUDE_DIR tidy.h PATH_SUFFIXES tidy)
    set(LIBTIDY_INCLUDE_DIR ${LIBTIDY_INCLUDE_DIR}/tidy CACHE PATH "Tidy include dir")
endif( NOT LIBTIDY_INCLUDE_DIR )

INCLUDE_DIRECTORIES(${KDE4_INCLUDES} ${LIBTIDY_INCLUDE_DIR} .)

SET(add_tocSources main.cpp)

KDE4_ADD_EXECUTABLE(add_toc ${add_tocSources})

TARGET_LINK_LIBRARIES(add_toc ${KDE4_KDEUI_LIBS} ${KDE4_KPARTS_LIBS} tidy)

install(TARGETS add_toc  ${INSTALL_TARGETS_DEFAULT_ARGS})
